# provenance

./: .gitignore  README.md  makefile
api/: .env.template  main.py  pyproject.toml
api/apis/fastapi/: agents.py  apikeys.py  audit.py  auth.py  escalations.py  gateway.py  policy.py  reports.py  tenants.py
api/core/agents/: dtos.py  interfaces.py  service.py
api/core/api_keys/: dtos.py  interfaces.py  service.py  utils.py
api/core/audit_events/: dtos.py  interfaces.py  service.py  types.py  utils.py
api/core/escalations/: dtos.py  interfaces.py  manager.py  service.py
api/core/policy/: dtos.py  engine.py  interfaces.py  service.py
api/core/reports/: service.py  types.py
api/core/tenants/: dtos.py  interfaces.py  service.py
api/core/users/: auth.py  dtos.py  interfaces.py  service.py
api/dbs/postgres/: engine.py
api/docker/: dev.Dockerfile
api/middlewares/: apikey_auth.py  jwt_bearer.py  jwt_cookie_auth.py
api/migrations/: env.py
api/migrations/versions/: 2ef14ed68f7a_create_tenant_policies_table.py  455b6b97f693_add_unique_constraint_for_name_x_user_.py  60669adbc143_create_api_keys_table.py  62dd65272e67_create_policies_table_and_remove_policy_.py  dc44c3282a63_add_tenant_policy_id_to_audit_events_.py  e015f3a1a0d5_initial_migrations.py
api/resources/policies/: agent_policy_template.json  agent_policy_template.yml  policy_agent.yml
api/services/: exceptions.py
api/services/dependencies/: __init__.py  auth.py  types.py
api/utils/: env_utils.py  jwt_utils.py  logger_utils.py  password_utils.py
sdk/python/: pyproject.toml
ui/: README.md  (+5 more)
(+104 files in other folders)
