[project]
name = "provenance"
version = "0.1.0"
description = "Agentic Audit & Compliance Layer (SOC2 for AI agents)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-json>=0.7.0",
    "structlog>=25.5.0",
    "uuid-utils>=0.14.1",
    "uvicorn>=0.42.0",
]
