[project]
name = "provenance-client"
version = "0.1.0"
description = "Policy-gated execution for AI agents"
readme = "provenance_client/README.md"
requires-python = ">=3.13"
license = { text = "GPL-2.0-only" }
authors = [
    { name = "Abram", email = "contactme.getaway658@passinbox.com" }
]
keywords = ["ai", "agents", "policy", "audit", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
]
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/aybruhm/provenance"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["provenance_client"]
